Added Java Best practices